containers/multiapp/manifests/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiapp-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: multiapp-postgres
  template:
    metadata:
      labels:
        component: multiapp-postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - name: multiapp-postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
