containers/multiapp/manifests/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiapp-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: multiapp-server
          image: drdre08/multi-server
          ports:
            - containerPort: 30002
