containers/multiapp/manifests/client-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: multiapp-client
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: websecure
  ports:
  - port: 30001
    targetPort: 30001
