containers/multiapp/manifests/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: multiapp-postgres
spec:
  type: ClusterIP
  selector:
    component: multiapp-postgres
  ports:
    - port: 5432
      targetPort: 5432
