containers/multiapp/manifests/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: multiapp-server
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 30002
      targetPort: 30002
